--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -3,9 +3,11 @@
     <div class="container" *ngIf="!authService.isTest() || !authService.isEvaluate()">
         <div class="navbar-header">
            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              Menu
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span> 
            </button>
-            <a class="navbar-brand" href="#">Career Skills Enhancement</a>
+            <a class="navbar-brand" href="#">Techfix Solutions</a>
         </div>
         
         <div class="collapse navbar-collapse" id="myNavbar">
