--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -57,10 +57,10 @@
 
       <div class="greetingMobile row">
           <div class="jargon col-xs-6">
-              <a routerLink="/register"><span class="glyphicon glyphicon-user icons"></span><br>Sign Up</a>
+              <a routerLink="/register" style="text-decoration:none"><span class="glyphicon glyphicon-user icons"></span><br>Sign Up</a>
           </div>
           <div class="jargon col-xs-6">
-              <a routerLink="/login"><span class="glyphicon glyphicon-log-in icons"></span><br>Login</a>
+              <a routerLink="/login" style="text-decoration:none"><span class="glyphicon glyphicon-log-in icons"></span><br>Login</a>
           </div>
       </div>
 
@@ -85,12 +85,12 @@
       <section class="section">
       </section>
   </div>
-
+<!--  class="animated infinite bounce" >-->
       <div class="row section">
       <section class="section" id="showcase">
         <div class="row try">
-          <div class="col-xs-10 col-md-12 animated infinite bounce">
-              <img id="" src="../../../assets/offer2.svg" alt="img" style="height:150px">
+          <div class="col-xs-10 col-md-12">
+              <img id="" src="../../../assets/offer2.svg" alt="img" style="box-shadow:0 8px 16px 0 rgba(0,0,0,0.2)">
           </div>
         </div>
         <div class="offer1">
@@ -209,8 +209,10 @@
             <div class="col-xs-10 col-md-12">
               <img style="height:150px;width:150px" id="" src="../../../assets/about1.svg" alt="img">
             </div>
-            <div class="hideImg col-xs-12 col-md-5">
-              <div class="pic">jj</div>
+            <div class="hideImg1 col-xs-12 col-md-5">
+              <div class="pic">
+                <img class="hostImg" src="../../../assets/bharath.jpg" alt="img">
+              </div>
             </div>
             <div class="motto col-xs-12 col-md-5">
               <h3>"We are pleased to provide you the best service with quality and care."</h3>
