--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -15,7 +15,7 @@
           <li class="active"><a [ngStyle]="marginLeft" href="#home" class="scroll">Home</a></li>
           <li><a href="#showcase1" class="scroll">Services</a></li>
           <li><a href="#host1" class="scroll">About</a></li>
-          <li><a href="#contact2" class="scroll">Contact</a></li>
+          <li><a href="#contact" class="scroll">Contact</a></li>
           <li class="pull-right" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
             <a routerLink="/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
           <li class="pull-right" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
@@ -232,15 +232,14 @@
       -->
 
       
-      <div>
-        <img id="img2" src="../../../assets/img2.jpg" alt="img">
+      <div id="contact">
+          <img id="img2" src="../../../assets/img2.jpg" alt="img">
       </div>
 
-      <div class="row" id="contact">
-      <section>
-      </section>
+      <div class="row section">
+        <section>
+        </section>
       </div>
-
 
       <div class="row section" id="contact2">
       <section class="section">
