--- a/angular-src/src/app/components/login/login.component.css
+++ b/angular-src/src/app/components/login/login.component.css
@@ -5,11 +5,11 @@
     background: none;
 }
 
-#inp1,.form-control{ 
+#inp1{ 
     background:none;
     border:none;
     border-bottom:2px solid blue;
-    width:50%;
+    width:60%;
     border-radius: 0;
     outline: none;
 }
@@ -21,7 +21,21 @@
 }
 
 .card {
-    background:lightblue;
+    margin:5% auto;
+    border-radius: 1%;
+    background:white;
     box-shadow: 0px 8px 16px 0 rgba(0,0,0,0.2);
-    padding:2%;
+    padding:5%;
+    width:50%;
+    padding-top:1%;
+    padding-bottom:5%;
+}
+
+
+@media only screen and (max-width: 1200px) {
+    .card {
+        width:100%;
+        padding:5%;
+        padding-bottom:10%;
+    } 
 }
