--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -1,38 +1,41 @@
-<h2 class="page-header">Register</h2>
-<form (submit)="onRegisterSubmit()">
-  <div class="form-group">
-    <label>Name<sup>*</sup></label>
-    <input type="text" class="form-control" [(ngModel)]="name" name="name">
-  </div>
 
-  <div class="form-group">
-    <label>Contact<sup>*</sup></label>
-    <input type="text" class="form-control" [(ngModel)]="contact" name="contact">
-  </div>
+<div class="container card">
+    <h2 class="page-header">Register</h2>
+    <form (submit)="onRegisterSubmit()">
+      <div class="form-group">
+        <label>Name<sup>*</sup></label>
+        <input type="text" placeholder="Enter your full name" class="form-control" [(ngModel)]="name" name="name">
+      </div>
 
-<!--
-  <input type="radio" name="options" value="op3" (click)="checkFlag('3')"/>{{apt1.option3}}<br>
-  <input type="radio" name="options" value="op4" (click)="checkFlag('4')"/>{{apt1.option4}}<br>
--->
+      <div class="form-group">
+        <label>Contact<sup>*</sup></label>
+        <input type="text" placeholder="Enter your contact no." class="form-control" [(ngModel)]="contact" name="contact">
+      </div>
 
-  <div class="form-group">
-    <label>Email<sup>*</sup></label>
-    <input type="text" class="form-control" [(ngModel)]="email" name="email">
-  </div>
-  <div class="form-group">
-    <label>Password<sup>*</sup></label>
-    <input type="password" class="form-control" [(ngModel)]="password" name="password">
-  </div>
-  <div class="form-group">
-    <label>Password Recovery Question<sup>*</sup></label>
-    <input type="text" class="form-control" [(ngModel)]="question" name="question">
-  </div>
-  <div class="form-group">
-    <label>Answer<sup>*</sup></label>
-    <input type="text" class="form-control" [(ngModel)]="answer" name="answer">
-  </div>
-  <input type="submit" class="btn btn-primary" value="Submit">
-</form>
+    <!--
+      <input type="radio" name="options" value="op3" (click)="checkFlag('3')"/>{{apt1.option3}}<br>
+      <input type="radio" name="options" value="op4" (click)="checkFlag('4')"/>{{apt1.option4}}<br>
+    -->
+
+      <div class="form-group">
+        <label>Email<sup>*</sup></label>
+        <input type="text" placeholder="Enter your work email" class="form-control" [(ngModel)]="email" name="email">
+      </div>
+      <div class="form-group">
+        <label>Password<sup>*</sup></label>
+        <input type="password" placeholder="Enter a strong password" class="form-control" [(ngModel)]="password" name="password">
+      </div>
+      <div class="form-group">
+        <label>Password Recovery Question<sup>*</sup></label>
+        <input type="text" placeholder="Enter any personal question" class="form-control" [(ngModel)]="question" name="question">
+      </div>
+      <div class="form-group">
+        <label>Answer<sup>*</sup></label>
+        <input type="text" placeholder="Definite answer" class="form-control" [(ngModel)]="answer" name="answer">
+      </div>
+      <input type="submit" class="btn btn-primary" value="Submit">
+    </form>
+</div>
 
 <div *ngIf=spin class="spinner">
     <div class="spinner_1"></div>
