--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -33,7 +33,7 @@
         <label>Answer<sup>*</sup></label>
         <input type="text" placeholder="Definite answer" class="form-control" [(ngModel)]="answer" name="answer">
       </div>
-      <input type="submit" class="btn btn-primary" value="Submit">
+      <input type="submit" class="registerbtn" value="Submit">
     </form>
 </div>
 
