--- a/angular-src/src/app/components/result/result.component.html
+++ b/angular-src/src/app/components/result/result.component.html
@@ -9,8 +9,8 @@
           <div id="{{i}}" class="panel-collapse collapse">
             <div class="panel-body">
               <div class="row">
-                <div class="col-xs-12 col-md-6"><i class="fa fa-envelope" style="margin:5px;font-size:20px;"></i>{{user.email}}</div>
-                <div class="col-xs-12 col-md-6"><i class="fa fa-mobile" style="margin:5px;font-size:20px;"></i>{{user.contact}}</div>
+                <div class="col-xs-12 col-md-6"><i class="fa fa-envelope" style="margin:5px;font-size:20px;color:#1792BA"></i>{{user.email}}</div>
+                <div class="col-xs-12 col-md-6"><i class="fa fa-mobile" style="margin:5px;font-size:20px;color:#1792BA"></i>{{user.contact}}</div>
               </div>
             </div>
           </div>
