--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -4,10 +4,10 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#" style="font-size:30px">Techfix Solutions</a>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"><!--
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-          <span class="icon-bar"></span> 
+          <span class="icon-bar"></span> -->
         </button>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
@@ -15,11 +15,19 @@
           <li class="active"><a [ngStyle]="marginLeft" href="#home" class="scroll">Home</a></li>
           <li><a href="#showcase1" class="scroll">Services</a></li>
           <li><a href="#host1" class="scroll">About</a></li>
-          <li><a href="#contact" class="scroll">Contact</a></li>
+          <li><a href="#contact" class="scroll">Contact</a></li><!--
           <li class="pull-right" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
             <a routerLink="/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
           <li class="pull-right" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
-            <a routerLink="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <a routerLink="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>-->
+            <li class="pull-right" *ngIf="authService.loggedIn() && !authService.isAdmin()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/dashboard">Dashboard</a></li>
+            <li class="pull-right" *ngIf="authService.loggedIn() && authService.isAdmin()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/result">Users</a></li>
+            <li class="pull-right" *ngIf="authService.loggedIn() && authService.isAdmin()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/report">Tickets</a></li>
+            <li class="pull-right" *ngIf="authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/profile">Profile</a></li>
+
+            <li class="pull-right" *ngIf="!authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/register">Sign Up</a></li>
+            <li class="pull-right" *ngIf="!authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/login">Login</a></li>
+            <li class="pull-right" *ngIf="authService.loggedIn()"><a href="#" (click)="onLogoutClick()">Logout</a></li>
         </ul>
       </div>
     </div>
@@ -29,9 +37,22 @@
   <div class="wrapper">
 
   <div class="home section" id="home">
-  <div>
+  <div></div>
+  <div class="banner">
+      <div class="col-xs-12 col-md-4">
+        <h1 style="padding-top:10px;">Issue Analysis Solution</h1>
+        We solve all issues related to mobile phones, desktop and laptop computers.<br><br>
+        <a class="homebtn" routerLink="/register">Sign Up</a>
+      </div>
+      <div class="col-md-1"></div>
+      <div class="col-md-7">
+        <img style="padding-top:10px;" class="banner1" src="../../../assets/banner2.png" alt="img1">
+        <img style="padding-top:10px;" class="banner2" src="../../../assets/banner1.png" alt="img2">
+      </div>
+  </div>
+  <div class="bannerGreet">
       <div class="greeting row section">
-        <div class="greetingHeader">You have reached us for</div>
+        <div class="greetingHeader">HAVE YOU REACHED US FOR</div>
         <div class="jargon col-md-3 col-xs-12">
           <i class="icons fa fa-apple"></i>
           <i class="icons fa fa-linux"></i>
