--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
       <label>Password</label><i class="fa fa-"></i>
       <input type="password" class="form-control" placeholder="Enter your password" [(ngModel)]="password" name="password">
     </div>
-    <input type="submit" class="btn btn-primary" value="Login">
+    <input type="submit" class="loginbtn" value="Login">
     <br><br>
     <span (click)="forgot()">
       <a>Forgot Password ?</a>
