--- a/angular-src/src/app/components/navbar/navbar.component.css
+++ b/angular-src/src/app/components/navbar/navbar.component.css
@@ -2,7 +2,7 @@
   border:none;
 }
     .navbar {
-        background:rgba(242, 44, 44, 0.51);
+        background:rgba(23,146,184,0.5);
         border: none;/*
         width: 100%;
         color:black;
@@ -11,6 +11,48 @@
         left:0;
         z-index:1;*/
       }
+      
+      .navbar-header > a {
+        color:black;
+        font-size:25px;
+        float: none;
+        display: inline-block;
+      }
+      
+      .navbar-header > a:hover {
+        color:white;
+        font-size:25px;
+        float: none;
+        display: inline-block;
+      }
+      
+      .navbar-nav > li > a {
+        font-size: 15px;  
+        text-align: center;
+        color:black;
+        display: inline-block;
+      }
+      
+      .navbar-nav > li >a:hover {
+        color:white;
+        background:none;
+      }
+    
+    .navbar .navbar-nav>.active>a,
+    .navbar .navbar-nav>.active>a:hover,
+    .navbar .navbar-nav>.active>a:focus {
+        color:white;
+        background:none;
+        border-bottom: 1.5px solid white;
+        display: inline-block;
+    }
+    
+    .active { 
+      color:white;
+      background:none;
+    }
+
+
       /*
       .navbar-header > a {
         font-size: 25px;
