--- a/angular-src/src/app/components/register/register.component.css
+++ b/angular-src/src/app/components/register/register.component.css
@@ -32,6 +32,23 @@
 }
 
 
+.registerbtn {
+    color:white;
+    text-decoration:none;
+    border:1px solid white;
+    padding:1vh;
+    font-size:17px;
+    margin:20px;
+    width:100%;
+    margin-left:0;
+    background:#1792BA;
+  }
+  
+.page-header {
+    color:#1792BA;
+}
+
+
 @media only screen and (max-width: 1200px) {
     .card {
         width:100%;
