--- a/angular-src/src/app/components/home/home.component.css
+++ b/angular-src/src/app/components/home/home.component.css
@@ -407,7 +407,7 @@
   }
   
   
-    @media only screen and (max-width: 1200px) { 
+    @media only screen and (min-width: 1200px) { 
           
       .home {/*
         background: url(../../../assets/home.jpg) no-repeat center center fixed;*/
