--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -39,13 +39,13 @@
   <div class="home section" id="home">
   <div></div>
   <div class="banner">
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-md-4 col-lg-4">
         <h1 style="padding-top:10px;">Issue Analysis Solution</h1>
         We solve all issues related to mobile phones, desktop and laptop computers.<br><br>
         <a class="homebtn" routerLink="/register">Sign Up</a>
       </div>
-      <div class="col-md-1"></div>
-      <div class="col-md-7">
+      <div class="col-md-1 col-lg-1"></div>
+      <div class="col-md-7 col-lg-7">
         <img style="padding-top:10px;" class="banner1" src="../../../assets/banner2.png" alt="img1">
         <img style="padding-top:10px;" class="banner2" src="../../../assets/banner1.png" alt="img2">
       </div>
@@ -53,22 +53,22 @@
   <div class="bannerGreet">
       <div class="greeting row section">
         <div class="greetingHeader">HAVE YOU REACHED US FOR</div>
-        <div class="jargon col-md-3 col-xs-12">
+        <div class="jargon col-md-3 col-xs-12 col-lg-3">
           <i class="icons fa fa-apple"></i>
           <i class="icons fa fa-linux"></i>
           <i class="icons fa fa-windows"></i><br>
           OS Installation & Application support
         </div>
-        <div class="jargon col-md-3 col-xs-12">
+        <div class="jargon col-md-3 col-xs-12 col-lg-3">
           <i class="icons fa fa-lock"></i><br>
           End point Security
         </div>
-        <div class="jargon col-md-3 col-xs-12">
+        <div class="jargon col-md-3 col-xs-12 col-lg-3">
           <i class="icons fa fa-cog"></i>
           <i class="icons fa fa-check"></i><br>
           Recovery & Maintenance
         </div>
-        <div class="jargon col-md-3 col-xs-12">
+        <div class="jargon col-md-3 col-xs-12 col-lg-3">
           <i class="icons fa fa-desktop"></i>
           <i class="icons fa fa-mouse"></i>
           <i class="icons fa fa-edit"></i><br>
