--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar">
+<nav class="navbar" style="background:rgba(23, 146, 186, 0.50)">
     <div class="container" *ngIf="!authService.isTest() || !authService.isEvaluate()">
         <div class="navbar-header">
            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
