--- a/angular-src/src/app/components/navbar/navbar.component.css
+++ b/angular-src/src/app/components/navbar/navbar.component.css
@@ -2,7 +2,7 @@
   border:none;
 }
     .navbar {
-        background:rgba(23,146,184,0.5);
+        background:rgba(23, 146, 186, 0.50);
         border: none;/*
         width: 100%;
         color:black;
